# lux-wine

./: .gitignore  CHANGELOG.md  LICENSE  LutrisWine.menu  LutrisWineService.desktop  LuxWine.menu  LuxWineService.desktop  Makefile  PKGBUILD  README.md  lutris-wine  lux-wine  lwrap
applications/: Config.desktop  Exit.desktop  Explorer.desktop  LutrisWine.desktop  LuxWine.desktop  Openpfx.desktop  Winemgr.desktop  Winetricks.desktop  addtolu.desktop  appcfg.desktop  backupmnt.desktop  backupunmnt.desktop  clearpfx.desktop  cmd.desktop  config.desktop  control.desktop  debug.desktop  exit.desktop  explorer.desktop  help.desktop  init.desktop  killexe.desktop  killshell.desktop  killtray.desktop  killwine.desktop  openpfx.desktop  pfxbackup.desktop  pfxrestore.desktop  regedit.desktop  rmapp.desktop  shell.desktop  shortcut.desktop  taskmgr.desktop  tray.desktop  uninstaller.desktop  update.desktop  version.desktop  winecfg.desktop  winemgr.desktop  winetricks.desktop
db/: #LeagueClient.lwdb  #PrinceOfPersia.lwdb  #steam.lwdb  #tlou-i-l.lwdb  ACOdyssey.lwdb  AbeWin.lwdb  Anno1800.lwdb  Anno2205.lwdb  Arcania Addon.lwdb  Arcania.lwdb  BIOFREAK.lwdb  Battle.net Launcher.lwdb  Battle.net-Setup.exe.lwdb  Battle.net-Setup.lwdb  BioshockHD.lwdb  BladeAssault.lwdb  CaliberSetup.lwdb  CaliberStart.lwdb  Crysis.lwdb  Crysis64.lwdb  DOOMEternalx64vk.lwdb  DS.lwdb  Direct Commander.lwdb  EMPEROR.lwdb  EpicGamesLauncher.lwdb  GenshinImpact.lwdb  LeagueClient.lwdb  MassEffect.lwdb  Porsche.lwdb  RA3.lwdb  (+38 more)
lw-tray/: Cargo.toml
lw-tray/.cargo/: config
lw-tray/src/: main.rs
(+82 files in other folders)
